--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="sass/style.css"/>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 
 
     <script src="js/main.js" type="application/javascript" ></script>
@@ -16,7 +16,21 @@
 
 </head>
 <body>
-
+    <header>
+        <div class="site-header">
+            <h1><img src="images/LogoCampusEats.png" alt="logo" class="logopng"></h1>
+            <nav class="header-menu">
+                <ul>
+                    <li><a href="">Cafes</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Needs</a></li>
+                    <li><a href="">Screens</a></li>
+                    <li><a href="">Team</a></li>
+                    <li><a href="">Testimonials</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 
     <section id="screen-content" class="screens main-section " >
