--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link type="text/css" rel="stylesheet" href="sass/style.css"/>
 
 
     <script src="js/main.js" type="application/javascript" ></script>
@@ -32,6 +32,7 @@
         </div>
     </header>
 
+    
 
     <section id="screen-content" class="screens main-section " >
         <h3 class=" section-title" >Screens</h3>
