--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 </head>
 <body>
+
     <header>
         <div class="site-header">
             <h1><img src="images/LogoCampusEats.png" alt="logo" class="logopng"></h1>
@@ -32,7 +33,12 @@
         </div>
     </header>
 
-    
+    <section id="top-content" class=" top main-section alternate " >
+        <div>
+            
+        </div>
+    </section>
+
 
     <section id="screen-content" class="screens main-section " >
         <h3 class=" section-title" >Screens</h3>
