--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="sass/style.css"/>
+    <script src="https://kit.fontawesome.com/9910dcf2f6.js" crossorigin="anonymous"></script>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 
 
     <script src="js/main.js" type="application/javascript" ></script>
@@ -16,28 +17,21 @@
 
 </head>
 <body>
-
     <header>
         <div class="site-header">
             <h1><img src="images/LogoCampusEats.png" alt="logo" class="logopng"></h1>
             <nav class="header-menu">
                 <ul>
-                    <li><a href="">Cafes</a></li>
-                    <li><a href="">Features</a></li>
-                    <li><a href="">Needs</a></li>
-                    <li><a href="">Screens</a></li>
-                    <li><a href="">Team</a></li>
-                    <li><a href="">Testimonials</a></li>
+                    <li><a href="#Cafes">Cafes</a></li>
+                    <li><a href="#Features">Features</a></li>
+                    <li><a href="#Needs">Needs</a></li>
+                    <li><a href="#Screens">Screens</a></li>
+                    <li><a href="#Team">Team</a></li>
+                    <li><a href="#Testimonials">Testimonials</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
-    <section id="top-content" class=" top main-section alternate " >
-        <div>
-            
-        </div>
-    </section>
 
 
     <section id="screen-content" class="screens main-section " >
@@ -139,6 +133,76 @@
 
         </section>
     </section>
+    <footer class="footer-class">
+        <!-- <div class="footer-icons">
+            <p><i class="fab fa-facebook-f"></i></p>
+            https://fontawesome.com/icons/facebook-f?style=brands
+            <p><i class="fab fa-twitter"></i></p>
+            https://fontawesome.com/icons/twitter?style=brands
+            <p><i class="fab fa-youtube"></i></p>
+            https://fontawesome.com/icons/youtube?style=brands
+            <p><i class="fab fa-pinterest-p"></i></p>
+            https://fontawesome.com/icons/pinterest-p?style=brands
+        </div>
+        <div class="footer-information">
+            <p><i class="fas fa-users"></i>About Us</p>
+            https://fontawesome.com/icons/users?style=solid
+            <p><i class="fas fa-comments"></i>Testimonails</p>
+            https://fontawesome.com/icons/thumbs-up?style=solid
+            <p><i class="fas fa-thumbs-up"></i>Features</p>
+            https://fontawesome.com/icons/thumbs-up?style=solid
+            <p><i class="fas fa-utensils"></i>Cafes</p>
+            https://fontawesome.com/icons/utensils?style=solid
+        </div>
+        <div class="footer-about">
+            <p>Campus eats will help to get your snacks easily and fastly from any cafe in the campus.</p>
+        </div>
+        <div class="footer-copyright">
+            <p>&copy;2020 awsome7 All right are reserved</p>
+        </div> -->
+            <div class="footer-subscribe">
+                <h4>Subscribe More Info</h4>
+                <input type="text" placeholder="Enter your Email">
+                <button>Subscribe</button>
+            </div>
+            <div class="footer-text">
+                <h3>Campus Eats</h3>
+                <p>An application that will help you to access all the cafes that are in college campus and make it easy for you to order food from anywhere anytime. Download the app now , order and grab your snack.</p>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="footer-information">
+                <p><i class="fas fa-users"></i>About Us</p>
+                <!-- https://fontawesome.com/icons/users?style=solid -->
+                <p><i class="fas fa-comments"></i>Testimonails</p>
+                <!-- https://fontawesome.com/icons/thumbs-up?style=solid -->
+                <p><i class="fas fa-thumbs-up"></i>Features</p>
+                <!-- https://fontawesome.com/icons/thumbs-up?style=solid -->
+                <p><i class="fas fa-utensils"></i>Cafes</p>
+                <!-- https://fontawesome.com/icons/utensils?style=solid -->
+            </div>
+        <div class="footer-contact">
+            <h3>Contact us @</h3>
+            <p>
+                <i class="fas fa-envelope"></i>
+                <!-- https://fontawesome.com/icons/envelope?style=solid -->
+                awsome7@gmail.com</p>
+        </div>
+            <div class="footer-icons">
+                <p><i class="fab fa-facebook-square"></i></p>
+                <!-- https://fontawesome.com/icons/facebook-square?style=brands -->
+                <p><i class="fab fa-twitter-square"></i></p>
+                <!-- https://fontawesome.com/icons/twitter-square?style=brands -->
+                <p><i class="fab fa-youtube-square"></i></p>
+                <!-- https://fontawesome.com/icons/youtube-square?style=brands -->
+                <p><i class="fab fa-pinterest-square"></i></p>
+                <!-- https://fontawesome.com/icons/pinterest-square?style=brands -->
+            </div>
+            <div class="footer-copyright">
+                <p>&copy;2020 awsome7 All right are reserved</p>
+            </div>
+
+    </footer>
 
 </body>
 </html>
