--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9910dcf2f6.js" crossorigin="anonymous"></script>
     <link type="text/css" rel="stylesheet" href="style.css"/>
 
-
     <script src="js/main.js" type="application/javascript" ></script>
-
 
 </head>
 <body>
@@ -33,8 +31,79 @@
         </div>
     </header>
 
+    <section id="top-content" class="top main-section alternate " >
+        <section class="sub-section" >
+            <div class="app-info">
+                <h4 class="article-title" >Connecting all Langara cafes</h4>
+                <div class=" app-cafes ">
+                    <div class=" cafe tim ">
+                        <img src="images/brands/tim.png"  alt="Tim Horton">
+                    </div>
+                    <div class=" cafe starbucks ">
+                        <img src="images/brands/starbucks.png"  alt="Starbucks">
+                    </div>
+                    <div class=" cafe tripleo ">
+                        <img src="images/brands/tripleos.png"  alt="triple'o">
+                    </div>
+                    <div class=" cafe subway ">
+                        <img src="images/brands/subway.png"  alt="Subway">
+                    </div>
+                    <div class=" cafe unioncafe ">
+                        <img src="images/brands/union.jpeg"  alt="Union Cafe">
+                    </div>
+                </div>
+            </div>
+            <div class="app-welcome-screen">
+                <article class="screen-item">
+                    <div class="screen-box">
+                        <div class="screen-regular"><img src="images/screens/BlackFrameScreens-01.png"
+                                                         alt="BlackFrameScreens-01.png"></div>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </section>
 
-    <section id="screen-content" class="screens main-section " >
+    <section id="needs-content" class="needs main-section  " >
+        <section class="sub-section" >
+            <p class="question" >Why CampusEats?</p>
+            <div class="answer-box">
+                <div class="answers answer-1 " >
+                    <div class="icon-box" >
+                        <i class=" fas fa-search "></i>
+                    </div>
+                    <div class="text-info">
+                        <p class=" answer-text " >Average time to order food/bevarges are around 9 minutes, with the range spread between 7 minutes (best) and 14 minutes (worst).</p>
+                    </div>
+                </div>
+                <div class="answers answer-2 " >
+                    <div class="icon-box" >
+                        <i class=" fas fa-search "></i>
+                    </div>
+                    <div class="text-info">
+                        <p class="  answer-text " >Vendor apps only allows to order from their own store. Such as Tim Horton and Subway etc.</p>
+                    </div>
+                </div>
+                <div class="answers answer-3 " >
+                    <div class="icon-box" >
+                        <i class=" fas fa-search "></i>
+                    </div>
+                    <div class="text-info">
+                        <p class="  answer-text " >Food ordering apps are not good fit for campus ordering.</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </section>
+
+    <section id="features-content" class="features main-section alternate " >
+        <h3 class=" section-title" >Features</h3>
+        <section class="sub-section" >
+        </section>
+    </section>
+
+    <section id="screen-content" class="screens main-section alternate " >
         <h3 class=" section-title" >Screens</h3>
         <section class="sub-section" >
 
@@ -133,33 +202,49 @@
 
         </section>
     </section>
+
+    <section id="testimonials-content" class="testimonials main-section " >
+        <h3 class=" section-title" >Testimonail</h3>
+        <section class="sub-section" >
+        </section>
+    </section>
+
+    <section id="team-content" class="team main-section alternate " >
+        <h3 class=" section-title" >Team</h3>
+        <section class="sub-section" >
+        </section>
+    </section>
+
+
     <footer class="footer-class">
-        <!-- <div class="footer-icons">
-            <p><i class="fab fa-facebook-f"></i></p>
-            https://fontawesome.com/icons/facebook-f?style=brands
-            <p><i class="fab fa-twitter"></i></p>
-            https://fontawesome.com/icons/twitter?style=brands
-            <p><i class="fab fa-youtube"></i></p>
-            https://fontawesome.com/icons/youtube?style=brands
-            <p><i class="fab fa-pinterest-p"></i></p>
-            https://fontawesome.com/icons/pinterest-p?style=brands
-        </div>
-        <div class="footer-information">
-            <p><i class="fas fa-users"></i>About Us</p>
-            https://fontawesome.com/icons/users?style=solid
-            <p><i class="fas fa-comments"></i>Testimonails</p>
-            https://fontawesome.com/icons/thumbs-up?style=solid
-            <p><i class="fas fa-thumbs-up"></i>Features</p>
-            https://fontawesome.com/icons/thumbs-up?style=solid
-            <p><i class="fas fa-utensils"></i>Cafes</p>
-            https://fontawesome.com/icons/utensils?style=solid
-        </div>
-        <div class="footer-about">
-            <p>Campus eats will help to get your snacks easily and fastly from any cafe in the campus.</p>
-        </div>
-        <div class="footer-copyright">
-            <p>&copy;2020 awsome7 All right are reserved</p>
-        </div> -->
+        <section id="footer-content" class="footer main-section alternate " >
+
+            <!-- <div class="footer-icons">
+           <p><i class="fab fa-facebook-f"></i></p>
+           https://fontawesome.com/icons/facebook-f?style=brands
+           <p><i class="fab fa-twitter"></i></p>
+           https://fontawesome.com/icons/twitter?style=brands
+           <p><i class="fab fa-youtube"></i></p>
+           https://fontawesome.com/icons/youtube?style=brands
+           <p><i class="fab fa-pinterest-p"></i></p>
+           https://fontawesome.com/icons/pinterest-p?style=brands
+       </div>
+       <div class="footer-information">
+           <p><i class="fas fa-users"></i>About Us</p>
+           https://fontawesome.com/icons/users?style=solid
+           <p><i class="fas fa-comments"></i>Testimonails</p>
+           https://fontawesome.com/icons/thumbs-up?style=solid
+           <p><i class="fas fa-thumbs-up"></i>Features</p>
+           https://fontawesome.com/icons/thumbs-up?style=solid
+           <p><i class="fas fa-utensils"></i>Cafes</p>
+           https://fontawesome.com/icons/utensils?style=solid
+       </div>
+       <div class="footer-about">
+           <p>Campus eats will help to get your snacks easily and fastly from any cafe in the campus.</p>
+       </div>
+       <div class="footer-copyright">
+           <p>&copy;2020 awsome7 All right are reserved</p>
+       </div> -->
             <div class="footer-subscribe">
                 <h4>Subscribe More Info</h4>
                 <input type="text" placeholder="Enter your Email">
@@ -181,13 +266,13 @@
                 <p><i class="fas fa-utensils"></i>Cafes</p>
                 <!-- https://fontawesome.com/icons/utensils?style=solid -->
             </div>
-        <div class="footer-contact">
-            <h3>Contact us @</h3>
-            <p>
-                <i class="fas fa-envelope"></i>
-                <!-- https://fontawesome.com/icons/envelope?style=solid -->
-                awsome7@gmail.com</p>
-        </div>
+            <div class="footer-contact">
+                <h3>Contact us @</h3>
+                <p>
+                    <i class="fas fa-envelope"></i>
+                    <!-- https://fontawesome.com/icons/envelope?style=solid -->
+                    awsome7@gmail.com</p>
+            </div>
             <div class="footer-icons">
                 <p><i class="fab fa-facebook-square"></i></p>
                 <!-- https://fontawesome.com/icons/facebook-square?style=brands -->
@@ -202,6 +287,8 @@
                 <p>&copy;2020 awsome7 All right are reserved</p>
             </div>
 
+
+        </section>
     </footer>
 
 
