Ranveer branch team + footer code

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
         </div>
     </header>
 
-
     <section id="screen-content" class="screens main-section " >
         <h3 class=" section-title" >Screens</h3>
-        <section class="sub-section" >
+        <!-- <section class="sub-section" >
 
             <article class="screen-item active ">
                 <h4 class="article-title">Welcome Screen</h4>
@@ -131,47 +130,60 @@
             </article>
 
 
-        </section>
+        </section> -->
     </section>
-    <footer class="footer-class">
-        <!-- <div class="footer-icons">
-            <p><i class="fab fa-facebook-f"></i></p>
-            https://fontawesome.com/icons/facebook-f?style=brands
-            <p><i class="fab fa-twitter"></i></p>
-            https://fontawesome.com/icons/twitter?style=brands
-            <p><i class="fab fa-youtube"></i></p>
-            https://fontawesome.com/icons/youtube?style=brands
-            <p><i class="fab fa-pinterest-p"></i></p>
-            https://fontawesome.com/icons/pinterest-p?style=brands
-        </div>
-        <div class="footer-information">
-            <p><i class="fas fa-users"></i>About Us</p>
-            https://fontawesome.com/icons/users?style=solid
-            <p><i class="fas fa-comments"></i>Testimonails</p>
-            https://fontawesome.com/icons/thumbs-up?style=solid
-            <p><i class="fas fa-thumbs-up"></i>Features</p>
-            https://fontawesome.com/icons/thumbs-up?style=solid
-            <p><i class="fas fa-utensils"></i>Cafes</p>
-            https://fontawesome.com/icons/utensils?style=solid
-        </div>
-        <div class="footer-about">
-            <p>Campus eats will help to get your snacks easily and fastly from any cafe in the campus.</p>
-        </div>
-        <div class="footer-copyright">
-            <p>&copy;2020 awsome7 All right are reserved</p>
-        </div> -->
-            <div class="footer-subscribe">
-                <h4>Subscribe More Info</h4>
-                <input type="text" placeholder="Enter your Email">
-                <button>Subscribe</button>
+    <section id="team-content" class="team main-section">
+        <h1>Meet the Team</h1>
+        <figure>
+            <div>
+                <img src="images/team/jaimin.jpeg">
+                <p>Jaimin Pandya</p>
+                <h3>Lead Developer</h3>
             </div>
+            <div>
+                <img src="images/team/kabirimage.jpg">
+                <p>Kabir Arora</p>
+                <h3>Project Manager</h3>
+            </div>
+            <div>
+                <img src="images/team/harneetimage.jpg">
+                <p>Harneet Kaur</p>
+                <h3>Lead Designer</h3>
+            </div>
+            <div>  
+                <img src="images/team/ranveerimage.jpg">
+                <p>Ranveer Kaur</p>
+                <h3>Designer</h3>
+            </div>
+            <div>
+                <img src="images/team/jagdeepimage.jpg">
+                <p>Jagdeep Kaur</p>
+                <h3>Quality Assurance</h3>
+            </div>
+            <div>
+                <img src="images/team/jaspreetimage.jpg">
+                <p>Jaspreet Kaur</p>
+                <h3>Developer</h3>
+            </div>
+            <div>
+                <img src="images/team/hirilimage.jpg">
+                <p>Hiril Kainth</p>
+                <h3>Designer</h3>
+            </div>
+        </figure>
+    </section>
+    <footer>
+        <div class="footer-class">
             <div class="footer-text">
-                <h3>Campus Eats</h3>
-                <p>An application that will help you to access all the cafes that are in college campus and make it easy for you to order food from anywhere anytime. Download the app now , order and grab your snack.</p>
-                <button></button>
-                <button></button>
+                <h2>Campus Eats</h2>
+                <p><q>An application that will help you to access all the cafes that are in college campus and make it easy for you to order food from anywhere anytime. Download the app now , order and grab your snack.</q></p>
+                <div class="download-btn">
+                    <a href=""><img src="images/google-play.png" class="google"></a>
+                    <a href=""><img src="images/app-store.png" class="apple"></a>
+                </div>
             </div>
             <div class="footer-information">
+                <h2>Tags</h2>
                 <p><i class="fas fa-users"></i>About Us</p>
                 <!-- https://fontawesome.com/icons/users?style=solid -->
                 <p><i class="fas fa-comments"></i>Testimonails</p>
@@ -181,13 +193,24 @@
                 <p><i class="fas fa-utensils"></i>Cafes</p>
                 <!-- https://fontawesome.com/icons/utensils?style=solid -->
             </div>
-        <div class="footer-contact">
-            <h3>Contact us @</h3>
-            <p>
-                <i class="fas fa-envelope"></i>
-                <!-- https://fontawesome.com/icons/envelope?style=solid -->
-                awsome7@gmail.com</p>
-        </div>
+            <div class="footer-contact">
+                <div class="footer-subscribe">
+                    <form action="">
+                        <h2>
+                            <lable>
+                                Subscribe For More Info
+                            </lable>
+                        </h2><br>
+                        <input type="text" placeholder="Enter your Email">
+                        <button>Subscribe</button>
+                    </form>
+                </div>
+                <h2>Contact us @</h2>
+                <p>
+                    <i class="fas fa-envelope"></i>
+                    <!-- https://fontawesome.com/icons/envelope?style=solid -->
+                    awsome7@gmail.com</p>
+            </div>
             <div class="footer-icons">
                 <p><i class="fab fa-facebook-square"></i></p>
                 <!-- https://fontawesome.com/icons/facebook-square?style=brands -->
@@ -201,6 +224,7 @@
             <div class="footer-copyright">
                 <p>&copy;2020 awsome7 All right are reserved</p>
             </div>
+        </div>
 
     </footer>
 
