--- a/index.html
+++ b/index.html
@@ -204,44 +204,65 @@
     </section>
 
     <section id="testimonials-content" class="testimonials main-section " >
-        <h3 class=" section-title" >Testimonail</h3>
+        <h3 class=" section-title" >Testimonials</h3>
         <section class="sub-section" >
+            <div class="testimonial testimonial-user1">
+                <div class="img-wrapper">
+                    <img src="images/testimonials/labbi.jpg">
+                </div>
+                <div>
+                    <h3>Lilly</h3>
+                    <p><i class="fas fa-quote-left"></i>Fantastic app. Works great. I was fed up with the individual apps and really wanted to be all those on one app. Excellent job <i class="fas fa-quote-right"></i></p>
+                </div>
+            </div>
+            <div class="testimonial testimonial-user2">
+                <div class="img-wrapper">
+                    <img src="images/testimonials/raj.jpg">
+                </div>
+                <div>
+                    <h3>Raj</h3>
+                    <p><i class="fas fa-quote-left"></i>Campus Eats works great. Its easy to install and the customization makes its really easy to customize the item selection.Thanks to the team. I love this service <i class="fas fa-quote-right"></i></p>
+                </div>
+            </div>
+            <div class="testimonial testimonial-user3">
+                <div class="img-wrapper">
+                    <img src="images/testimonials/sharik.jpg">
+                </div>
+                <div>
+                    <h3>Sharik</h3>
+                    <p><i class="fas fa-quote-left"></i>Looks very promising so far! I have been searching for an app like this one. I am looking forward to getting much from it. Dont know what I'd do without this app.<i class="fas fa-quote-right"></i></p>
+                </div>
+            </div>
+            <div class="testimonial testimonial-user4">
+                <div class="img-wrapper">
+                    <img src="images/testimonials/gurdarshan.jpg">
+                </div>
+                <div>
+                    <h3>Gurdarshan</h3>
+                    <p><i class="fas fa-quote-left"></i>I would say this app is great for convinence. All cafes at one place just WOW!!!! <i class="fas fa-quote-right"></i></p>
+                </div>
+            </div>
+            <div class="testimonial testimonial-user5">
+                <div class="img-wrapper">
+                    <img src="images/testimonials/satyam.jpg">
+                </div>
+                <div>
+                    <h3>Satyam</h3>
+                    <p><i class="fas fa-quote-left"></i>I love this app, I can order from all the cafes at once. It's amazing. <i class="fas fa-quote-right"></i></p>
+                </div>
+            </div>
+            <div class="testimonial testimonial-user6">
+                <div class="img-wrapper">
+                    <img src="images/testimonials/labbi.jpg">
+                </div>
+                <div>
+                    <h3>Lovedeep</h3>
+                    <p><i class="fas fa-quote-left"></i>The interface is very clear and all the featurs are easily accessible.<i class="fas fa-quote-right"></i></p>
+                </div>
+            </div>
         </section>
     </section>
 
-    <footer class="footer-class">
-        <section id="footer-content" class="footer main-section alternate " >
-
-            <!-- <div class="footer-icons">
-           <p><i class="fab fa-facebook-f"></i></p>
-           https://fontawesome.com/icons/facebook-f?style=brands
-           <p><i class="fab fa-twitter"></i></p>
-           https://fontawesome.com/icons/twitter?style=brands
-           <p><i class="fab fa-youtube"></i></p>
-           https://fontawesome.com/icons/youtube?style=brands
-           <p><i class="fab fa-pinterest-p"></i></p>
-           https://fontawesome.com/icons/pinterest-p?style=brands
-       </div>
-       <div class="footer-information">
-           <p><i class="fas fa-users"></i>About Us</p>
-           https://fontawesome.com/icons/users?style=solid
-           <p><i class="fas fa-comments"></i>Testimonails</p>
-           https://fontawesome.com/icons/thumbs-up?style=solid
-           <p><i class="fas fa-thumbs-up"></i>Features</p>
-           https://fontawesome.com/icons/thumbs-up?style=solid
-           <p><i class="fas fa-utensils"></i>Cafes</p>
-           https://fontawesome.com/icons/utensils?style=solid
-       </div>
-       <div class="footer-about">
-           <p>Campus eats will help to get your snacks easily and fastly from any cafe in the campus.</p>
-       </div>
-       <div class="footer-copyright">
-           <p>&copy;2020 awsome7 All right are reserved</p>
-       </div> -->
-            <div class="footer-subscribe">
-                <h4>Subscribe More Info</h4>
-                <input type="text" placeholder="Enter your Email">
-                <button>Subscribe</button>
     <section id="team-content" class="team main-section">
         <h1>Meet the Team</h1>
         <figure>
@@ -282,6 +303,7 @@
             </div>
         </figure>
     </section>
+
     <footer>
         <div class="footer-class">
             <div class="footer-text">
@@ -335,12 +357,7 @@
                 <p>&copy;2020 awsome7 All right are reserved</p>
             </div>
         </div>
-
-
-        </section>
     </footer>
-
-
 
 </body>
 </html>
