--- a/index.html
+++ b/index.html
@@ -100,6 +100,33 @@
     <section id="features-content" class="features main-section alternate " >
         <h3 class=" section-title" >Features</h3>
         <section class="sub-section" >
+            <div class="feature-box">
+                <div class="features feature-1 " >
+                    <div class="icon-box" >
+                        <i class=" fas fa-search "></i>
+                    </div>
+                    <div class="text-info">
+                        <p class=" feature-text " >Average time to order food/bevarges are around 9 minutes, with the range spread between 7 minutes (best) and 14 minutes (worst).</p>
+                    </div>
+                </div>
+                <div class="features feature-2 " >
+                    <div class="icon-box" >
+                        <i class=" fas fa-search "></i>
+                    </div>
+                    <div class="text-info">
+                        <p class="  feature-text " >Vendor apps only allows to order from their own store. Such as Tim Horton and Subway etc.</p>
+                    </div>
+                </div>
+                <div class="features feature-3 " >
+                    <div class="icon-box" >
+                        <i class=" fas fa-search "></i>
+                    </div>
+                    <div class="text-info">
+                        <p class="  feature-text " >Food ordering apps are not good fit for campus ordering.</p>
+                    </div>
+                </div>
+
+            </div>
         </section>
     </section>
 
