--- a/index.html
+++ b/index.html
@@ -97,35 +97,37 @@
         </section>
     </section>
 
-    <section id="features-content" class="features main-section alternate " >
+    <section id="features-content" class="features-container main-section alternate " >
         <h3 class=" section-title" >Features</h3>
         <section class="sub-section" >
             <div class="feature-box">
                 <div class="features feature-1 " >
                     <div class="icon-box" >
-                        <i class=" fas fa-search "></i>
+                       <img src="images/features/reddem.png" alt="Redeem" />
                     </div>
                     <div class="text-info">
-                        <p class=" feature-text " >Average time to order food/bevarges are around 9 minutes, with the range spread between 7 minutes (best) and 14 minutes (worst).</p>
+                        <h4>Redeem</h4>
+                        <p class=" feature-text " >Easily redeem the points you have before payment on campus eats.</p>
                     </div>
                 </div>
                 <div class="features feature-2 " >
                     <div class="icon-box" >
-                        <i class=" fas fa-search "></i>
+                        <img src="images/features/saving.png" alt="Save" />
                     </div>
                     <div class="text-info">
-                        <p class="  feature-text " >Vendor apps only allows to order from their own store. Such as Tim Horton and Subway etc.</p>
+                        <h4>Time Saving</h4>
+                        <p class="  feature-text " >Order from anywhere inside or outside the campus and just pickup</p>
                     </div>
                 </div>
                 <div class="features feature-3 " >
                     <div class="icon-box" >
-                        <i class=" fas fa-search "></i>
+                        <img src="images/features/food.png" alt="Location" />
                     </div>
                     <div class="text-info">
-                        <p class="  feature-text " >Food ordering apps are not good fit for campus ordering.</p>
+                        <h4>Location</h4>
+                        <p class="  feature-text " >Get location of the cafe in the campus.</p>
                     </div>
                 </div>
-
             </div>
         </section>
     </section>
@@ -280,10 +282,10 @@
             </div>
             <div class="testimonial testimonial-user6">
                 <div class="img-wrapper">
-                    <img src="images/testimonials/labbi.jpg">
+                    <img src="images/testimonials/himauli.jpeg">
                 </div>
                 <div>
-                    <h3>Lovedeep</h3>
+                    <h3>Himauli</h3>
                     <p><i class="fas fa-quote-left"></i>The interface is very clear and all the featurs are easily accessible.<i class="fas fa-quote-right"></i></p>
                 </div>
             </div>
