--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </section>
     </section>
 
-    <section id="screen-content" class="screens main-section alternate " >
+    <section id="screen-content" class="screens main-section  " >
         <h3 class=" section-title" >Screens</h3>
         <section class="sub-section" >
 
@@ -239,7 +239,7 @@
                 <div class="img-wrapper">
                     <img src="images/testimonials/labbi.jpg">
                 </div>
-                <div>
+                <div class="text-info" >
                     <h3>Lilly</h3>
                     <p><i class="fas fa-quote-left"></i>Fantastic app. Works great. I was fed up with the individual apps and really wanted to be all those on one app. Excellent job <i class="fas fa-quote-right"></i></p>
                 </div>
@@ -248,7 +248,7 @@
                 <div class="img-wrapper">
                     <img src="images/testimonials/raj.jpg">
                 </div>
-                <div>
+                <div class="text-info"  >
                     <h3>Raj</h3>
                     <p><i class="fas fa-quote-left"></i>Campus Eats works great. Its easy to install and the customization makes its really easy to customize the item selection.Thanks to the team. I love this service <i class="fas fa-quote-right"></i></p>
                 </div>
@@ -257,7 +257,7 @@
                 <div class="img-wrapper">
                     <img src="images/testimonials/sharik.jpg">
                 </div>
-                <div>
+                <div class="text-info"  >
                     <h3>Sharik</h3>
                     <p><i class="fas fa-quote-left"></i>Looks very promising so far! I have been searching for an app like this one. I am looking forward to getting much from it. Dont know what I'd do without this app.<i class="fas fa-quote-right"></i></p>
                 </div>
@@ -266,7 +266,7 @@
                 <div class="img-wrapper">
                     <img src="images/testimonials/gurdarshan.jpg">
                 </div>
-                <div>
+                <div class="text-info"  >
                     <h3>Gurdarshan</h3>
                     <p><i class="fas fa-quote-left"></i>I would say this app is great for convinence. All cafes at one place just WOW!!!! <i class="fas fa-quote-right"></i></p>
                 </div>
@@ -275,7 +275,7 @@
                 <div class="img-wrapper">
                     <img src="images/testimonials/satyam.jpg">
                 </div>
-                <div>
+                <div class="text-info"  >
                     <h3>Satyam</h3>
                     <p><i class="fas fa-quote-left"></i>I love this app, I can order from all the cafes at once. It's amazing. <i class="fas fa-quote-right"></i></p>
                 </div>
@@ -284,7 +284,7 @@
                 <div class="img-wrapper">
                     <img src="images/testimonials/himauli.jpeg">
                 </div>
-                <div>
+                <div class="text-info"  >
                     <h3>Himauli</h3>
                     <p><i class="fas fa-quote-left"></i>The interface is very clear and all the featurs are easily accessible.<i class="fas fa-quote-right"></i></p>
                 </div>
