--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <h3 class=" section-title" >Testimonials</h3>
         <section class="sub-section" >
             <div class="testimonial testimonial-user1">
-                <div class="img-wrapper">
+                <div class="icon-box">
                     <img src="images/testimonials/labbi.jpg">
                 </div>
                 <div class="text-info" >
@@ -245,7 +245,7 @@
                 </div>
             </div>
             <div class="testimonial testimonial-user2">
-                <div class="img-wrapper">
+                <div class="icon-box">
                     <img src="images/testimonials/raj.jpg">
                 </div>
                 <div class="text-info"  >
@@ -254,7 +254,7 @@
                 </div>
             </div>
             <div class="testimonial testimonial-user3">
-                <div class="img-wrapper">
+                <div class="icon-box">
                     <img src="images/testimonials/sharik.jpg">
                 </div>
                 <div class="text-info"  >
@@ -263,7 +263,7 @@
                 </div>
             </div>
             <div class="testimonial testimonial-user4">
-                <div class="img-wrapper">
+                <div class="icon-box">
                     <img src="images/testimonials/gurdarshan.jpg">
                 </div>
                 <div class="text-info"  >
@@ -272,7 +272,7 @@
                 </div>
             </div>
             <div class="testimonial testimonial-user5">
-                <div class="img-wrapper">
+                <div class="icon-box">
                     <img src="images/testimonials/satyam.jpg">
                 </div>
                 <div class="text-info"  >
@@ -281,7 +281,7 @@
                 </div>
             </div>
             <div class="testimonial testimonial-user6">
-                <div class="img-wrapper">
+                <div class="icon-box">
                     <img src="images/testimonials/himauli.jpeg">
                 </div>
                 <div class="text-info"  >
