--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </section>
 
     <section id="testimonials-content" class="testimonials main-section " >
-        <h3 class=" section-title" >Testimonail</h3>
+        <h3 class=" section-title" >Testimonial</h3>
         <section class="sub-section" >
         </section>
     </section>
@@ -233,10 +233,10 @@
            https://fontawesome.com/icons/utensils?style=solid
        </div>
        <div class="footer-about">
-           <p>Campus eats will help to get your snacks easily and fastly from any cafe in the campus.</p>
+           <p>Campus eats will help you get your snacks easily from any cafe in the campus.</p>
        </div>
        <div class="footer-copyright">
-           <p>&copy;2020 awsome7 All right are reserved</p>
+           <p>&copy;2020 awesome7 All right are reserved</p>
        </div> -->
             <div class="footer-subscribe">
                 <h4>Subscribe More Info</h4>
@@ -307,9 +307,9 @@
                 <div class="footer-subscribe">
                     <form action="">
                         <h2>
-                            <lable>
+                            <label>
                                 Subscribe For More Info
-                            </lable>
+                            </label>
                         </h2><br>
                         <input type="text" placeholder="Enter your Email">
                         <button>Subscribe</button>
@@ -319,7 +319,7 @@
                 <p>
                     <i class="fas fa-envelope"></i>
                     <!-- https://fontawesome.com/icons/envelope?style=solid -->
-                    awsome7@gmail.com</p>
+                    awseome7@gmail.com</p>
             </div>
             <div class="footer-icons">
                 <p><i class="fab fa-facebook-square"></i></p>
@@ -332,7 +332,7 @@
                 <!-- https://fontawesome.com/icons/pinterest-square?style=brands -->
             </div>
             <div class="footer-copyright">
-                <p>&copy;2020 awsome7 All right are reserved</p>
+                <p>&copy;2020 awesome7. All rights are reserved</p>
             </div>
         </div>
 
