--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
             <h1><img src="images/LogoCampusEats.png" alt="logo" class="logopng"></h1>
             <nav class="header-menu">
                 <ul>
-                    <li><a href="#Cafes">Cafes</a></li>
-                    <li><a href="#Features">Features</a></li>
-                    <li><a href="#Needs">Needs</a></li>
-                    <li><a href="#Screens">Screens</a></li>
-                    <li><a href="#Team">Team</a></li>
-                    <li><a href="#Testimonials">Testimonials</a></li>
+                    <li><a href="#top-content">Cafes</a></li>
+                    <li><a href="#needs-content">Features</a></li>
+                    <li><a href="#features-content">Needs</a></li>
+                    <li><a href="#screen-content">Screens</a></li>
+                    <li><a href="#testimonials-content">Testimonials</a></li>
+                    <li><a href="#team-content">Team</a></li>
                 </ul>
             </nav>
+            <div class="button-con" >
+                <button type="button" id="mainMenu"><i class="fas fa-hamburger"></i></button>
+            </div>
         </div>
     </header>
 
@@ -232,7 +235,7 @@
         </section>
     </section>
 
-    <section id="testimonials-content" class="testimonials main-section " >
+    <section id="testimonials-content" class="testimonials main-section alternate " >
         <h3 class=" section-title" >Testimonials</h3>
         <section class="sub-section" >
             <div class="testimonial testimonial-user1">
@@ -292,7 +295,7 @@
         </section>
     </section>
 
-    <section id="team-content" class="team main-section alternate ">
+    <section id="team-content" class="team main-section  ">
         <h3 class=" section-title" >Meet the Team</h3>
         <section class="sub-section" >
             <figure>
@@ -347,14 +350,14 @@
             </div>
             <div class="footer-information">
                 <h2>Tags</h2>
-                <p><i class="fas fa-users"></i>About Us</p>
-                <!-- https://fontawesome.com/icons/users?style=solid -->
-                <p><i class="fas fa-comments"></i>Testimonails</p>
-                <!-- https://fontawesome.com/icons/thumbs-up?style=solid -->
-                <p><i class="fas fa-thumbs-up"></i>Features</p>
-                <!-- https://fontawesome.com/icons/thumbs-up?style=solid -->
-                <p><i class="fas fa-utensils"></i>Cafes</p>
-                <!-- https://fontawesome.com/icons/utensils?style=solid -->
+                <ul>
+                    <li><a href="#top-content">Cafes</a></li>
+                    <li><a href="#needs-content">Features</a></li>
+                    <li><a href="#features-content">Needs</a></li>
+                    <li><a href="#screen-content">Screens</a></li>
+                    <li><a href="#testimonials-content">Testimonials</a></li>
+                    <li><a href="#team-content">Team</a></li>
+                </ul>
             </div>
             <div class="footer-contact">
                 <div class="footer-subscribe">
@@ -375,20 +378,42 @@
                     awsome7@gmail.com</p>
             </div>
             <div class="footer-icons">
-                <p><i class="fab fa-facebook-square"></i></p>
-                <!-- https://fontawesome.com/icons/facebook-square?style=brands -->
-                <p><i class="fab fa-twitter-square"></i></p>
-                <!-- https://fontawesome.com/icons/twitter-square?style=brands -->
-                <p><i class="fab fa-youtube-square"></i></p>
-                <!-- https://fontawesome.com/icons/youtube-square?style=brands -->
-                <p><i class="fab fa-pinterest-square"></i></p>
-                <!-- https://fontawesome.com/icons/pinterest-square?style=brands -->
+
+                <ul>
+                    <li><a href="fb"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="twitter"><i class="fab fa-twitter-square"></i></a></li>
+                    <li><a href="yt"><i class="fab fa-youtube-square"></i></a></li>
+                    <li><a href="pint"><i class="fab fa-pinterest-square"></i></a></li>
+                </ul>
+
+<!--                <p><i class="fab fa-facebook-square"></i></p>-->
+<!--                &lt;!&ndash; https://fontawesome.com/icons/facebook-square?style=brands &ndash;&gt;-->
+<!--                <p><i class="fab fa-twitter-square"></i></p>-->
+<!--                &lt;!&ndash; https://fontawesome.com/icons/twitter-square?style=brands &ndash;&gt;-->
+<!--                <p><i class="fab fa-youtube-square"></i></p>-->
+<!--                &lt;!&ndash; https://fontawesome.com/icons/youtube-square?style=brands &ndash;&gt;-->
+<!--                <p><i class="fab fa-pinterest-square"></i></p>-->
+<!--                &lt;!&ndash; https://fontawesome.com/icons/pinterest-square?style=brands &ndash;&gt;-->
             </div>
             <div class="footer-copyright">
                 <p>&copy;2020 awsome7 All right are reserved</p>
             </div>
         </div>
     </footer>
+
+    <div class="side-menu">
+        <nav class="header-menu">
+            <ul>
+                <li><a href="#top-content">Cafes</a></li>
+                <li><a href="#needs-content">Features</a></li>
+                <li><a href="#features-content">Needs</a></li>
+                <li><a href="#screen-content">Screens</a></li>
+                <li><a href="#testimonials-content">Testimonials</a></li>
+                <li><a href="#team-content">Team</a></li>
+            </ul>
+        </nav>
+    </div>
+
 
 </body>
 </html>
